@@ -1,3 +1,7 @@
+2006-04-15 Yen-Ju Chen <yjchenx at gmail>
+
+	* Initial port of parse.
+
 2006-04-14 Yen-Ju Chen <yjchenx at gmail>
 
 	* Revert back to an older version
